--- a/ml-visualized-web/content/optimization/convex_set.mdx
+++ b/ml-visualized-web/content/optimization/convex_set.mdx
@@ -1,13 +1,12 @@
 ---
-title: 'Optimization'
-chapter: 'Optimization'
+title: 'Convex Set'
 section: 'optimization'
 group: 'Optimization'
 order: 2
 summary: "Optimization is the heart of machine learning. It's how we find the best model parameters to fit our data. In this chapter, we'll explore the fundamental concepts and algorithms that power optimization in machine learning."
 icon: 'TrendingUp'
-slug: 'optimization'
-navLabel: 'Optimization'
+slug: 'convex-set'
+navLabel: 'Convex Set'
 ---
 
 testt
